# solid_kmer_utils

./: CMakeLists.txt  README.md  install_htslib.sh
libs/htslib-1.20/: bcf_sr_sort.pico  bgzf.pico  config.h  config.mk  config.status  errmod.pico  faidx.pico  header.pico  hfile.pico  hfile_gcs.pico  hfile_libcurl.pico  hfile_s3.pico  hfile_s3_write.pico  hts.pico  hts_expr.pico  hts_os.pico  htslib-uninstalled.pc  kfunc.pico  kstring.pico  md5.pico  multipart.pico  probaln.pico  realn.pico  regidx.pico  region.pico  sam.pico  sam_mods.pico  synced_bcf_reader.pico  tbx.pico  textutils.pico  thread_pool.pico  vcf.pico  vcf_sweep.pico  vcfutils.pico
libs/htslib-1.20/cram/: cram_codecs.pico  cram_decode.pico  cram_encode.pico  cram_external.pico  cram_index.pico  cram_io.pico  cram_stats.pico  mFILE.pico  open_trace_file.pico  pooled_alloc.pico  string_alloc.pico
libs/htslib-1.20/htscodecs/htscodecs/: arith_dynamic.pico  fqzcomp_qual.pico  htscodecs.pico  pack.pico  rANS_static.pico  rANS_static32x16pr.pico  rANS_static32x16pr_avx2.pico  rANS_static32x16pr_avx512.pico  rANS_static32x16pr_neon.pico  rANS_static32x16pr_sse4.pico  rANS_static4x16pr.pico  rle.pico  tokenise_name3.pico  utils.pico
libs/htslib-1.20/install/lib/pkgconfig/: htslib.pc
libs/htslib-1.20/test/: hts_endian  plugins-dlhts  test_kfunc  test_kstring  test_time_funcs
libs/kmc_api/: kmer_api.h
src/: reference_kmer_counter.cpp
